styles/base.css
/* ... */
/* Display a hand cursor for words that can be looked up. */
.linked a {
    cursor: pointer;
}

.scrolls {
    cursor: auto;
}

.hidden_cursor, .hidden_cursor a {
    cursor: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAABdJREFUOMtjYBgFo2AUjAIGhv///zMBAA0JAwCYSe1yAAAAAElFTkSuQmCC), auto!important;
    cursor: none!important;
}


.loaders {
    height:     50px;
    width:      100%;
    background: url("../images/loader.gif") no-repeat center;
    visibility: hidden;
    opacity:    .5;
}


/* Make labels have a hand cursor. */
label {
    cursor: pointer;
}

.callout {
    /* Rounded corners for Mozilla 3.6- */
    -moz-border-radius: 9px;
    border-radius:      9px;
    -moz-box-shadow:    3px 3px 6px rgba(0,0,0,.2), inset -1px 0 2px rgba(0,0,0,.2);
    -webkit-box-shadow: 3px 3px 6px rgba(0,0,0,.2), inset -1px 0 2px rgba(0,0,0,.2);
    -ms-box-shadow:     3px 3px 6px rgba(0,0,0,.2), inset -1px 0 2px rgba(0,0,0,.2);
    box-shadow:         3px 3px 6px rgba(0,0,0,.2), inset -1px 0 2px rgba(0,0,0,.2);
    background: #FFF;
    /* Transparent background for Firefox 3.5- */
    background: rgba(255, 255, 255, .95);
    /* Firefox 3.6+ */
    background:    -moz-linear-gradient(bottom, rgba(240,240,240,.97), rgba(255,255,255,.97) 60px);
    /* Chrome/Safari 5.1+ */
    background: -webkit-linear-gradient(bottom, rgba(240,240,240,.97), rgba(255,255,255,.97) 60px);
    /* Opera 11.10 */
    background:      -o-linear-gradient(bottom, rgba(240,240,240,.97), rgba(255,255,255,.97) 60px);
    /* IE 10 */
    background:     -ms-linear-gradient(bottom, rgba(240,240,240,.97), rgba(255,255,255,.97) 60px);
    background:         linear-gradient(bottom, rgba(240,240,240,.97), rgba(255,255,255,.97) 60px);
    position: absolute;
    border: #ccc solid 1px;
    /* There is no padding on the left so that the lexicon title's diacritics have enough room to be displayed. */
    padding: 4px 4px 4px 0;
    font-size: 16px;
    min-width: 46px;
    max-width: 95%;
    max-height: 90%;
    width:  300px;
    height: 125px;
}
.callout .inside {
    overflow-x: hidden;
    height: 100%;
}
.callout .pointer-down {
    -moz-box-shadow:    5px 3px 6px -2px rgba(0,0,0,.2);
    -webkit-box-shadow: 5px 3px 6px -2px rgba(0,0,0,.2);
    -ms-box-shadow:     5px 3px 6px -2px rgba(0,0,0,.2);
    box-shadow:         5px 3px 6px -2px rgba(0,0,0,.2);
    -moz-transform:    rotate(45deg);
    -webkit-transform: rotate(45deg);
    -o-transform:      rotate(45deg);
    -ms-transform:     rotate(45deg);
    transform:         rotate(45deg);
    position: absolute;
    width:  20px;
    height: 20px;
    border-bottom: #ccc solid 1px;
    border-right:  #ccc solid 1px;
    /* Firefox 3.6+ */
    background-image:    -moz-linear-gradient(left top, rgba(255,255,255,0) 45%, rgba(240,240,240,.97) 45%);
    /* Chrome/Safari 5.1+ */
    background-image: -webkit-linear-gradient(left top, rgba(255,255,255,0) 45%, rgba(240,240,240,.97) 45%);
    /* Opera 11.10 */
    background-image:      -o-linear-gradient(left top, rgba(255,255,255,0) 45%, rgba(240,240,240,.97) 45%);
    /* IE 10 */
    background-image:     -ms-linear-gradient(left top, rgba(255,255,255,0) 45%, rgba(240,240,240,.97) 45%);
    background-image:         linear-gradient(left top, rgba(255,255,255,0) 45%, rgba(240,240,240,.97) 45%);
    bottom: -11px;
}
.callout .pointer-up {
    -moz-box-shadow:    -1px -3px 6px -3px rgba(0,0,0,.2);
    -webkit-box-shadow: -1px -3px 6px -3px rgba(0,0,0,.2);
    -ms-box-shadow:     -1px -3px 6px -3px rgba(0,0,0,.2);
    box-shadow:         -1px -3px 6px -3px rgba(0,0,0,.2);
    -moz-transform:    rotate(45deg);
    -webkit-transform: rotate(45deg);
    -o-transform:      rotate(45deg);
    -ms-transform:     rotate(45deg);
    transform:         rotate(45deg);
    position: absolute;
    width:  20px;
    height: 20px;
    border-top:  #ccc solid 1px;
    border-left: #ccc solid 1px;
    /* Firefox 3.6+ */
    background-image:    -moz-linear-gradient(right bottom, rgba(255,255,255,0) 47%, rgba(255,255,255,.95) 47%);
    /* Chrome/Safari 5.1+ */
    background-image: -webkit-linear-gradient(right bottom, rgba(255,255,255,0) 47%, rgba(255,255,255,.95) 47%);
    /* Opera 11.10 */
    background-image:      -o-linear-gradient(right bottom, rgba(255,255,255,0) 47%, rgba(255,255,255,.95) 47%);
    /* IE 10 */
    background-image:     -ms-linear-gradient(right bottom, rgba(255,255,255,0) 47%, rgba(255,255,255,.95) 47%);
    background-image:         linear-gradient(right bottom, rgba(255,255,255,0) 47%, rgba(255,255,255,.95) 47%);
    top: -11px;
}

.lex-title {
    /* Push the text over a little so that diacritics are not cut off. */
    margin-left: 7px;
}

.lex-orig_word {
    font-family: 'BFHebrew', 'Palatino Linotype', Palatino, TexGyrePagella, 'TeX Gyre Pagella', 'URWPalladioL', 'Book Antiqua', 'Times new Roman', Times, serif;
    font-size: 30px;
}

.lex-pronun {
    font-size: 14px;
    white-space: nowrap;
}

.lex-body {
    /* Push the text over a little to make it line up (more or less) with the title. */
    margin-left: 4px;
}

/* The class allows for simple fade ins and outs with JavaScript. */
.fade {
    /* Fade out slightly when the mouse cursor moves off. */
    /* Transition for Mozilla (Firefox 4.0+) */
    -moz-transition:    opacity .3s ease;
    /* Transition for WebKit */
    -webkit-transition: opacity .3s ease;
    /* Transition for Opera 10.5+ */
    -o-transition:      opacity .3s ease;
}


/* Verses created from a search. */
.search_verse {
    text-indent: 2em;
    width: 100%;
}

/* Verses created from a verse lookup. */
.verse {
    text-indent: 1em;
    width: 100%;
}

/* Make all lines of text the same height. */
.scrolls .verse, .scrolls .first_verse, .psalm_title, .search_verse, .paragraph, .subscription {
    line-height: 19px;
}
/* ... */

